# coom-suite

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  26-03-06 Blind Generation.md  CHANGES.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  asp-output.txt  associations.md  build_grammar.sh  convert.lp  coom-output.txt  coom2json.py  coom_exists.lp  coom_solution.lp  default-bike-coom.lp  exists.lp  factformat.md  facts.lp  fclingo-constraint-compilation.lp  fragments.md  mkdocs.yml  noxfile.py  output-city-bike.json  output-city-bike.yaml  output-kids-bike.json  output-kids-bike.yaml  output.json  pyproject.toml  test.py
.github/workflows/: deploy.yml  doc.yml  test.yml
benchmarks/: README.md
benchmarks/city-bike-fleet/: create_instances.sh  instance.coom
benchmarks/city-bike-fleet/instances/: citybike-n10.coom  citybike-n100.coom  citybike-n110.coom  citybike-n120.coom  citybike-n130.coom  citybike-n140.coom  citybike-n150.coom  citybike-n20.coom  citybike-n30.coom  citybike-n40.coom  citybike-n50.coom  citybike-n60.coom  citybike-n70.coom  citybike-n80.coom  citybike-n90.coom
benchmarks/core/: create_instances.sh  generate.py
benchmarks/core/instances/: randomcore100_150_2.coom  randomcore100_150_3.coom  randomcore100_150_4.coom  randomcore100_250_2.coom  randomcore100_250_3.coom  randomcore100_250_4.coom  randomcore100_50_2.coom  randomcore100_50_3.coom  randomcore100_50_4.coom  randomcore200_150_2.coom  randomcore200_150_3.coom  randomcore200_150_4.coom  randomcore200_250_2.coom  randomcore200_250_3.coom  randomcore200_250_4.coom  randomcore200_50_2.coom  randomcore200_50_3.coom  randomcore200_50_4.coom  randomcore25_150_2.coom  randomcore25_150_3.coom  randomcore25_150_4.coom  randomcore25_250_2.coom  randomcore25_250_3.coom  randomcore25_250_4.coom  randomcore25_50_2.coom  randomcore25_50_3.coom  randomcore25_50_4.coom  randomcore400_150_2.coom  randomcore400_150_3.coom  randomcore400_150_4.coom  randomcore400_250_2.coom  randomcore400_250_3.coom  randomcore400_250_4.coom  randomcore400_50_2.coom  randomcore400_50_3.coom  randomcore400_50_4.coom  randomcore50_150_2.coom  randomcore50_150_3.coom  randomcore50_150_4.coom  randomcore50_250_2.coom  (+5 more)
benchmarks/restaurant/: create_instances.sh  instance.coom
benchmarks/restaurant/instances/: restaurant1000_2000.coom  restaurant1000_4000.coom  restaurant1000_6000.coom  restaurant100_200.coom  restaurant100_400.coom  restaurant100_600.coom  restaurant1500_3000.coom  restaurant1500_6000.coom  restaurant1500_9000.coom  restaurant2000_12000.coom  restaurant2000_4000.coom  restaurant2000_8000.coom  restaurant500_1000.coom  restaurant500_2000.coom  restaurant500_3000.coom
benchmarks/travel-bike-fleet/: create_instances.sh  instance.coom
benchmarks/travel-bike-fleet/instances/: travelbike1.coom  travelbike10.coom  travelbike11.coom  travelbike12.coom  travelbike13.coom  travelbike14.coom  travelbike15.coom  travelbike2.coom  travelbike3.coom  travelbike4.coom  travelbike5.coom  travelbike6.coom  travelbike7.coom  travelbike8.coom  (+1 more)
benchmarks/unbounded-cardinalities/: README.md
doc/: index.md
doc/content/: factformat.md  fragments.md  installation.md  questions.md  quickstart.md
docs/: getting_started.md  index.md  installation.md
docs/community/: customization.md  help.md  index.md
docs/examples/: benchmarks.md  cargo-bike.md  city-bike.md  index.md  kids-bike.md  travel-bike.md  ui.md  user-input.md
docs/reference/: index.md
docs/usage/: index.md  ui.md
examples/: README.md
examples/asp/: README.md  cargo-bike-coom.lp  cargobike-coom.lp  city-bike-coom.lp  city-bike-processed.lp  city-bike.lp  kids-bike-coom.lp  kids-bike-processed.lp  kids-bike.lp  pc-coom.lp  pc.lp  shadow-master-coom.lp  shadow-master-v0.2-coom.lp  shadow-master-v0.2.lp  shadow-master.lp  travel-bike-coom.lp  travel-bike-discrete-llm.lp  travel-bike-discrete.lp  travel-bike-llm.lp  travel-bike-minimize.lp  travel-bike-processed.lp  travel-bike-simplified-coom.lp  travel-bike-simplified.lp  travel-bike.lp
examples/coom/: README.md  association-constraint.coom  association-count.coom  association-require.coom  association-simple.coom  association-sum.coom  association-table.coom  box.coom  cargo-bike.coom  cargobike.coom  city-bike.coom  elements.coom  house-simple.coom  house.coom  kids-bike-default.coom  kids-bike.coom  metro-big.coom  metro.coom  olympic-bus.coom  pc.coom  racks-simple.coom  racks.coom  shadow-master-v0.2.coom  shadow-master.coom  sum.coom  travel-bike-minimize.coom  travel-bike-simplified.coom  travel-bike.coom  tshirt.coom  user-association-constraint.coom  user-association.coom  user-input-box.coom  user-input-bus.coom  user-input-elements.coom  user-input-house-simple.coom  user-input-house.coom  user-input-kids.coom  user-input-metro.coom  user-input-travel.coom  user-input.coom  (+1 more)
examples/tests/: combination.lp  combination_at_part_with_wildcard.lp  combination_with_structure.lp  condition.lp  parentheses.lp  require_two_wheels.lp  require_with_constant.lp  require_with_number.lp  require_with_number_ge.lp  require_with_partonomy.lp  simple_arithmetic_minus_default_right.lp  simple_arithmetic_plus.lp  storage.lp  test_cases.coom  unnamed-test.lp
navigation/: README.md  implementation.md  literature.md  use-cases.md
navigation-materials/: README.md  bike-script  implementation.md
navigation-materials/examples/: bike.ipynb  bike.lp  example.ipynb  utils.py
navigation/examples/: example.ipynb
src/coomsolver/: __init__.py  __main__.py  application.py
src/coomsuite/: __init__.py  __main__.py  application.py  bounds.py  extend-with-llm.py  multi_application.py  preprocess.py  ui_backend.py
src/navigation/: __init__.py  __main__.py  coom_navigator.py  coom_shell.py  navigator.py  shell.py
tests/: __init__.py  test_bounds.py  test_clingo_kids.py  test_main.py  test_multi_application.py  test_parse.py  test_parser.py  test_preprocess.py  test_sanity_checks.py  test_solve.py  test_user_input.py  tests.py
tests/clintests/: __init__.py  tests_preprocess.py  tests_solve.py
(+654 files in other folders)
