[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coomsolver"
authors = [
    { name = "Nicolas Rühling", email = "nicolas.ruehling@uni-potsdam.de" },
]
description = "Python package to parse and solve COOM configuration instances using ASP."
requires-python = ">=3.9"
dependencies = [
    "antlr4-tools",
    "antlr4-python3-runtime==4.9.3",
    "clingo==5.7.*",
    "importlib_resources",
    "clintest>=0.2.0",
    "clingcon >= 5.2.1, == 5.2.*",                                                                  # requirement for fclingo
    "fclingo@git+https://github.com/potassco/fclingo.git@abed038abffff7146f1c2d14332638dafdade92d",
]
license = { file = "LICENSE" }
dynamic = ["version"]
readme = "README.md"

[project.urls]
Hompage = "https://github.com/krr-up/coom-solver.git/"

[project.optional-dependencies]
format = ["black", "isort", "autoflake"]
lint_pylint = ["pylint"]
typecheck = ["types-setuptools", "mypy"]
test = ["coverage[toml]"]
doc = ["sphinx", "furo", "nbsphinx", "sphinx_copybutton", "myst-parser"]
dev = ["coomsolver[test,typecheck,lint_pylint]"]

[project.scripts]
coomsolver = "coomsolver.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-attributes = 8
max-bool-expr = 5
max-branches = 12
max-locals = 30
max-parents = 7
max-public-methods = 20
max-returns = 10
max-statements = 50
min-public-methods = 1

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true

[tool.pylint.basic]
argument-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
variable-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
good-names = ["_"]

[tool.pylint.MASTER]
ignore = ["coom_grammar"]

[tool.coverage.run]
source = ["coomsolver", "tests"]
omit = ["*/coomsolver/__main__.py", "*/coom_grammar/*", "*/tests/__init__.py"]

[tool.coverage.report]
exclude_lines = ["assert", "nocoverage"]

[tool.mypy]
exclude = ['coom_grammar', '/coomsolver/__main__.py']
