[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coomsuite"
authors = [{ name = "Nicolas Rühling", email = "nruehling@uni-potsdam.de" }]
description = "Python package to parse and solve COOM configuration instances using ASP."
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime==4.13.2",
    "clingo==5.7.*",
    "clingcon >= 5.2.1, == 5.2.*",                                                                  # requirement for flingo
    "fclingo@git+https://github.com/potassco/fclingo.git@84b949a2aed895c44dcbb2b58a2f29931135f3d9",
    # "fclingo@https://test-files.pythonhosted.org/packages/82/06/ef25771583f892f30ccac59ea7c13fa3a4a32fef2c9bf4746fb0b4ba9adb/fclingo-0.1.1.tar.gz",
    "clinguin>=2.6.1",
]
license-files = ["LICENSE"]
dynamic = ["version"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/potassco/coom-suite.git/"

[project.optional-dependencies]
format = ["black", "isort", "autoflake"]
lint_pylint = ["pylint==3.3.9"]
typecheck = ["types-setuptools", "mypy"]
test = ["coverage[toml]", "clintest>=0.2.0"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdoclingo",
    "tree_sitter",
]
grammar = ["antlr4-tools"]
dev = ["coomsuite[test,typecheck,lint_pylint,grammar]"]

[project.scripts]
coomsuite = "coomsuite.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 5
max-positional-arguments = 5
max-attributes = 8
max-bool-expr = 5
max-branches = 12
max-locals = 30
max-parents = 7
max-public-methods = 20
max-returns = 10
max-statements = 50
min-public-methods = 1

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true

[tool.pylint.basic]
argument-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
variable-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
good-names = ["_"]

[tool.pylint.MASTER]
ignore = ["coom_grammar"]

[tool.coverage.run]
source = ["coomsuite", "tests"]
omit = [
    "*/coomsuite/__main__.py",
    "*/coom_grammar/*",
    "*/tests/__init__.py",
    "ui_backend.py",
]

[tool.coverage.report]
exclude_lines = ["assert", "nocoverage"]

[tool.mypy]
exclude = ['coom_grammar', '/coomsuite/__main__.py']
